# Machine-Learning

./: .gitignore  10_rating_prediction.ipynb  11_auto_ml.ipynb  1_data_preprocessing.ipynb  2_practice_titanic.ipynb  3_evaluation.ipynb  4_classification.ipynb  5_regression.ipynb  6_practice_car.ipynb  7_clustering.ipynb  8_recommendation_system.ipynb  9_collaborative_filtering.ipynb  README.md  day1.ipynb  pyproject.toml  wine_quality.ipynb
